# encap_enum

./: .gitignore  Cargo.toml  changelog.md  readme.md
src/: lib.rs
