[package]
name = "encap_enum"
version = "0.3.1"
authors = ["Jonathan Thomason"]
edition = "2018"
keywords = ["bit", "flags", "bitflags", "bitmask", "enum"]
description = "A non-verbose way to define a group of constants and bit flags."
categories = ["no-std"]
license = "MIT"
repository = "https://github.com/Razordor/encap_enum"
readme = "readme.md"
homepage = "https://github.com/Razordor/encap_enum"
exclude = [".vs/", ".vscode/", "target/", "x64/", "encap_enum.sln", "encap_enum.vcxproj", "encap_enum.vcxproj.filters", "encap_enum.vcxproj.user", "sh.exe.stackdump", ".git/", ".github/", "changelog.md", "encap_enum.code-workspace", ".gitignore"]
documentation = "https://docs.rs/encap_enum"
